Bug 414532 - Impossible to take screenshot including a tooltip on Wayland because timer feature is disabled
Summary: Impossible to take screenshot including a tooltip on Wayland because timer fe...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 19.08.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Boudhayan Gupta
URL:
Keywords:
: 384637 422845 423698 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-11-26 11:38 UTC by Patrick Silva
Modified: 2020-07-20 16:17 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2019-11-26 11:38:45 UTC
STEPS TO REPRODUCE
1. start Wayland session
2. hover over the icon of the apps launcher in the lower left corner
3. while the tooltip is visible, pŕess printscreen key

OBSERVED RESULT
a message showing instructions to take a screenshot shows up and the tooltip 
is immediately dismissed. If we press enter, the taken screenshot does not include the tooltip.

EXPECTED RESULT
we can take screenshot including a tooltip on Wayland

SOFTWARE/OS VERSIONS
Windows: 
Operating System: Arch Linux
KDE Plasma Version: 5.17.3
KDE Frameworks Version: 5.64.0
Qt Version: 5.13.2
Comment 1 Nate Graham 2019-11-28 04:32:45 UTC
Does it work if you use the timer feature?
Comment 2 Patrick Silva 2019-11-28 12:37:47 UTC
"Delay" spinbox is disabled on Wayland.
Comment 3 Méven Car 2020-05-07 07:28:59 UTC
Will be addressed by https://phabricator.kde.org/D29408
Comment 4 Nate Graham 2020-06-12 18:06:58 UTC
*** Bug 422845 has been marked as a duplicate of this bug. ***
Comment 5 Méven Car 2020-06-16 17:06:46 UTC
Git commit 889d407bd49b1f53e9dde101bc7d05e6ffc14d95 by Méven Car.
Committed on 16/06/2020 at 17:06.
Pushed by meven into branch 'master'.

Wayland: allow to take immediate and delayed screenshots

Summary:
The feature adds a runtime dependency on D29407 Plasma 5.20.
Related: bug 407489
FIXED-IN: 5.20

Reviewers: davidre, davidedmundson, apol, bport, ngraham

Reviewed By: davidre, apol

Subscribers: pejakm, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D29408

M  +46   -6    src/Platforms/PlatformKWinWayland.cpp

https://invent.kde.org/graphics/spectacle/commit/889d407bd49b1f53e9dde101bc7d05e6ffc14d95
Comment 6 Méven Car 2020-06-24 06:22:28 UTC
*** Bug 384637 has been marked as a duplicate of this bug. ***
Comment 7 Méven Car 2020-06-30 15:02:51 UTC
*** Bug 423698 has been marked as a duplicate of this bug. ***
Comment 8 Claudius Ellsel 2020-07-20 16:17:17 UTC
Although fixed already: As a workaround it worked for me using Spectacle via the command line. I still had to click to actually take the screenshot but could successfully capture the region I was interested in:

spectacle -b -o test.png -d 1000