Wayland: allow to take immediate and delayed screenshots

Summary:
The feature adds a runtime dependency on D29407 Plasma 5.20.

BUG: 414532
BUG: 407489
FIXED-IN: 5.20

Reviewers: davidre, davidedmundson, apol, bport, ngraham

Reviewed By: davidre, apol

Subscribers: pejakm, #spectacle

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D29408